[package]
name = "sigma-rs"
version = "0.1.0"
repository = "https://github.com/Litch1-v/sigma-rs"
description = "A Rust implementation and parser of Sigma rules"
authors = ["Litch1<litch1chk@gmail.com>"]
documentation = "https://docs.rs/sigma-rs"
keywords = ["sigma","edr","threathunt"]
readme = "README.md"
license = "	MIT"
edition = "2021"



[dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
nom = "7"
anyhow = "1.0"
glob-match = "=0.2.1"
regex = "1.7"